# shell-renderer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
includes/: render.h  utils.h
src/: cube.cpp  luminance.cpp  main.cpp  test.cpp
src/render/: CMakeLists.txt  render.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h
srclib/: render.cpp  utils.cpp
